--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3049,6 +3049,29 @@ body {
 .cid-t3z8uGS5Gh .media-container-row {
   flex-wrap: wrap;
 }
+.cid-t9snZEBK5K {
+  padding-top: 75px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-t9snZEBK5K .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-t9snZEBK5K .mbr-section-title {
+  color: #2666d0;
+}
+#custom-html-4z {
+  /* Type valid CSS here */
+}
+#custom-html-4z div {
+  padding: 80px 0;
+  color: #777;
+  text-align: center;
+}
+#custom-html-4z p {
+  font-size: 60px;
+  color: #777;
+}
 .cid-t7wSGIBNr1 {
   padding-top: 150px;
   padding-bottom: 150px;
